# ptt

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
.ultraplan/: ptt-implementation.md
docs/: tutorial.md
docs/adr/: 0001-send-email-over-smtp.md  0002-clone-remote-instead-of-worktree.md  0003-command-routines.md
docs/specs/: 2026-06-30-ptt-design.md
ptt/: __main__.py  claude.py  cli.py  command.py  config.py  ghcheck.py  git_ops.py  logstore.py  models.py  netcheck.py  notify.py  outcomes.py  proc.py  projects.py  runner.py  schedule.py
tests/: conftest.py  test_claude.py  test_cli.py  test_command.py  test_command_runner.py  test_config.py  test_ghcheck.py  test_git_ops.py  test_logstore.py  test_models.py  test_netcheck.py  test_notify.py  test_outcomes.py  test_proc.py  test_projects.py  test_property.py  test_runner.py  test_runner_integration.py  test_schedule.py  test_smoke.py
tests/fake_bin/: claude  gh
