[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptt"
version = "0.1.0"
description = "prompt-then-that: run Markdown prompts through Claude Code on git projects on a schedule"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ptt = "ptt.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.hatch.build.targets.wheel]
packages = ["ptt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
