[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptt"
version = "0.1.0"
description = "prompt-then-that: run Markdown prompts through Claude Code on git projects on a schedule"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ptt = "ptt.cli:main"

[dependency-groups]
dev = [
    "hypothesis>=6",
    "pytest",
    "pytest-cov",
    "ruff>=0.15.20",
    "ty>=0.0.58",
]

[tool.hatch.build.targets.wheel]
packages = ["ptt"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "RUF"]
# ptt's whole job is shelling out to git/gh/claude/systemctl via argument lists
# (never shell=True), so S603 (subprocess call) and S607 (partial exe path — we
# rely on PATH, by design for a CLI) are noise here rather than real findings.
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
# Tests aren't a production security surface: asserts (S101), subprocess calls to
# the fakes in tests/fake_bin, hard-coded fixture credentials, and temp paths are
# all expected and intentional.
"tests/**" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ptt --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
# __main__.py is the `python -m ptt` entrypoint (calls cli.main); nothing to cover.
omit = ["ptt/__main__.py"]
